
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - Support tables without a header recipe.
    Fixes:
        - Support craft-fluid and scripted research triggers.
        - Consider quality restrictions when analyzing craft-item or build-item technology triggers.
----------------------------------------------------------------------------------------------------------------------
Version: 2.16.0
Date: October 24th 2025
    Features:
        - Restore support for Factorio 1.1.
    Fixes:
        - Fix rendering of multi-icon technologies (e.g. shooting speed techs)
        - Add simplified support for debug.getinfo(), only returns short_src. Fixes #455, #504.
        - Fix load errors for Pacifist (#535), PlanetsLib, and some planet mods.
        - Fix loading mods where modules spoil into other modules.
        - Modules were not exported correctly in labs or mining drills.
----------------------------------------------------------------------------------------------------------------------
Version: 2.15.0
Date: September 1st 2025
    Features:
        - Add Ctrl+Shift+Click to add the most cost-effective, accessible recipe for an item.
        - Better accessibility analysis for Ultracube.
    Fixes:
        - Fix icon rendering.
        - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
        - Modify text colors for highlighted rows in dark mode to improve readability.
        - Don't draw table intermediates as <1μ ingredients/products.
        - The file-picker on the Welcome Screen no longer closes by itself right after being opened.
    Internal changes:
        - Enable mod-fixes for the data, data-updates, and data-final-fixes files.
        - Recompile the lua lib for linux (PR 515). The script now uses CFLAGS and LDFLAGS.